[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bird-audio-xeno-canto"
version = "0.1.0"
description = "Puerto Rico bird audio recordings explorer"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Ronald Rodriguez"}
]
dependencies = [
    "pandas>=1.3.0",
    "streamlit>=1.0",
    "streamlit-folium>=0.6",
    "folium>=0.12",
    "requests>=2.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.scripts]
bird-app = "apps.streamlit_app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
